--- a/config/tasks.json
+++ b/config/tasks.json
@@ -1,28 +1,40 @@
-[
-  {
-    "id": "t1",
-    "villageId": "46598",
-    "type": "upgrade_field",
-    "target": {
-      "resource": "clay"
-    },
-    "condition": {
-      "maxLevel": 8
-    },
-    "priority": 1,
-    "status": "active"
+[{
+  "id": "task-001",
+  "villageId": "28277",
+  "type": "upgrade_building",
+  "target": {
+    "slotId": 30
   },
-  {
-    "id": "t2",
-    "villageId": "46598",
-    "type": "upgrade_building",
-    "target": {
-      "gid": 15
-    },
-    "condition": {
-      "maxLevel": 10
-    },
-    "priority": 2,
-    "status": "active"
-  }
-]
+  "condition": {
+    "maxLevel": 3
+  },
+  "priority": 1,
+  "status": "active"
+},
+
+{
+  "id": "task-003",
+  "villageId": "28277",
+  "type": "upgrade_field",
+  "target": {
+    "slotId": 17
+  },
+  "condition": {
+    "maxLevel": 7
+  },
+  "priority": 1,
+  "status": "active"
+},
+{
+  "id": "task-002",
+  "villageId": "28277",
+  "type": "upgrade_building",
+  "target": {
+    "slotId": 32
+  },
+  "condition": {
+    "maxLevel": 4
+  },
+  "priority": 1,
+  "status": "active"
+}]
