--- a/config/defaultConfig.json
+++ b/config/defaultConfig.json
@@ -1,5 +1,5 @@
 {
-    "serverUrl" : "https://hux.x3.hungary.travian.com",
+    "serverUrl" : "https://ts30.x3.europe.travian.com",
     "username" : "okilic1049@gmail.com",
     "password" : "@Omer1049+1049!"
 }
